[package]
name = "qr_grabber"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
iced = { version = "0.14.0", features = ["tiny-skia"] }
env_logger = "0.11.10"
image = "0.25.10"
rfd = "0.17.2"
rqrr = "0.10.1"

[profile.release-lto]
inherits = "release"
lto = true
